# lingyu-meisha-jp

./: README.md
server/: .gitignore  Makefile.am  conf.h  conf.h.in  configure  configure.ac  findexp  libtool
server/autom4te.cache/: output.0  output.1  traces.0  traces.1
server/godssenki/: 91config.lua  Makefile.am  android.lua  android.tw.lua  baoyou.sh  ck.gamedb.sh  ck.php.sh  ck.statics.sh  conf17.lua  config-server1.lua  config-server2.lua  config-server3.lua  config-server4.lua  config-server5.lua  config-server_uc.lua  config_91.lua  daemon.sh  daemonjp2.sh  dailyupdate.sh  env.sh  event.php  fixarena.php  godser  ios.lua  ios.tw.lua  jp_ceshi.lua  jp_online.lua  liujian.lua  mail.php  mysql_liujian.sh  online.lua  online2.lua  pack_tool.sh  pack_zip.sh  passiveskill.json  publish.sh  restart-1.sh  restart-2.sh  restart-3.sh  restart-4.sh  (+13 more)
server/godssenki/cdkey/: commands  conf.ini  generate.py  table.sql  utils.py
server/godssenki/common/: 91msg_def.h  Makefile.am  afl.h  code_def.h  conf_db_def.cpp  conf_db_def.h  config.cpp  config.h  db_code_gen.lua  db_code_gen.lua.new  db_def.cpp  db_def.h  db_ext.h  db_helper.cpp  db_helper.h  db_smart_up.h  dbgl_service.h  dbmid_def.h  gen_gch.sh  gw_client.cpp  gw_client.h  invcode_msg_def.h  msg_def.h  msg_dispatcher.cpp  msg_dispatcher.h  pf_msg_def.h  pid_util.cpp  pid_util.h  precomplie.sh  remote_info.h  repo.h  repo_def.cpp  repo_def.h  service_base.h  svn-commit.tmp  tbb_mem.h  test_msg_def.h  version.h
server/godssenki/conf/: 91.json  91.lua  format.py  gen_jconf.lua  test.json  test.lua
server/godssenki/cron_db/: mkstatics_god.sh
server/godssenki/daemon/: Makefile.am  cszs-key.pem  daemon_lua.cpp  daemon_lua.h  daemon_server.h  entry.lua  main.cpp  startup.sh  startup.tw.sh
server/godssenki/dbmid/: Makefile.am  dbmid_cache.cpp  dbmid_cache.h  dbmid_service.cpp  dbmid_service.h  main.cpp
server/godssenki/gateway/: Makefile.am  gw_private_service.cpp  gw_private_service.h  gw_public_service.cpp  gw_public_service.h  gw_rt_client.cpp  gw_rt_client.h  main.cpp  record_msg.cpp  record_msg.h
server/godssenki/gmtool/: 001.php  add_item.php  add_partner.php  base.php  cache.php  config.php  fix_bag.php  fix_partner.php  query_bag.php  query_partner.php  query_user.php  query_user_pro.php  repo.php  set_user_pro.php  test.php  test_proc.php
server/godssenki/guozhi_client/: trans.bat
server/godssenki/invcode/: Makefile.am  invcode_service.cpp  invcode_service.h  main.cpp
server/godssenki/login/: Makefile.am  lg_gen_name.cpp  lg_gen_name.h  lg_logic.cpp  lg_logic.cpp.back  lg_logic.h  lg_logic.h.back  lg_platform.cpp  lg_platform.h  lg_service.cpp  lg_service.h  lg_statics.cpp  lg_statics.h  main.cpp  main.cpp.back
server/godssenki/platform/: Makefile.am  main.cpp  pf_service.cpp  pf_service.h
server/godssenki/repo/: Imt_shop.json  PT_shop.json  achievement_task.json  activity_cfg.json  activity_consumption.json  alchemy_money.json  altar.json  announcement_event.json  announcement_update.json  apppay.json  arena_rank.json  artifact.json  artifact_levelup.json  backpack.json  boss_reward.json  boss_up.json  buff_reject.json  cdkey_reward.json  chat.json  chip_shop.json  chip_smash.json  chronicle.json  chronicle_story.json  config.json  daily_pay.json  daily_sign.json  dailyquest.json  destiny.json  drug.json  equip.json  equip_compose.json  equip_packs.json  equip_upgrade.json  equip_upgrade_pay.json  errors.json  event.json  event_difficulty.json  event_open.json  event_point.json  event_ranking.json  (+138 more)
server/godssenki/repo_tw/: activity_cfg.json  activity_consumption.json  activity_time.json  altar.json  arena_rank.json  avatar.json  buff.json  cdkey_reward.json  daily_pay.json  dailyquest.json  dailyquest_reward.json  destiny.json  drug.json  equip.json  equip_compose.json  equip_packs.json  equip_upgrade.json  equip_upgrade_pay.json  font.json  fp_reward.json  friend_reward.json  full_name.txt  gemstone.json  gemstone_compose.json  gemstone_group.json  guild.json  guildboss.json  guildskill.json  hero_piece.json  invasion.json  invasion_city.json  invasion_coordinate.json  invasion_drop.json  invasion_prefix.json  item.json  kof_1st_reward.json  kof_rank_reward.json  kof_reward.json  level_reward.json  levelup.json  (+55 more)
server/godssenki/robot_client/: ys_socket.cpp  ys_socket.h
server/godssenki/robot_script/: common.lua  entry.lua  npc.lua  repo.lua  round.lua  scene.lua  task.lua  timer.lua
server/godssenki/route/: Makefile.am  main.cpp  rt_private_service.cpp  rt_private_service.h  rt_public_service.cpp  rt_public_service.h
server/godssenki/scene/: Makefile.am  main.cpp  sc_achievement.cpp  sc_achievement.h  sc_act_daily_task.cpp  sc_act_daily_task.h  sc_activity.cpp  sc_activity.h  sc_arena.cpp  sc_arena.h  sc_arena_page_cache.cpp  sc_arena_page_cache.h  sc_arena_rank.cpp  sc_arena_rank.h  sc_arena_tial.h  sc_bag.cpp  sc_bag.h  sc_battle.cpp  sc_battle.h  sc_battle_pvp.cpp  sc_battle_pvp.h  sc_battle_record.cpp  sc_battle_record.h  sc_boss.cpp  sc_boss.h  sc_bullet.cpp  sc_bullet.h  sc_cache.cpp  sc_cache.h  sc_cache_data.h  sc_card_comment.cpp  sc_card_comment.h  sc_card_event.cpp  sc_card_event.h  sc_card_rank.cpp  sc_card_rank.h  sc_chip_smash.cpp  sc_chip_smash.h  sc_chronicle.cpp  sc_chronicle.h  (+135 more)
server/godssenki/script/: bag.lua  check_db.py  dailyUpdate.php  dailyUpdate.sh  dailyUpdateMaster.php  entry.lua  vip.lua
server/godssenki/simu_client/: Makefile.am  main.cpp  ys_socket.cpp
server/godssenki/simu_compression/: Makefile.am
server/godssenki/simu_script/: GodsSenki.luaprj  entry.lua  findexp
server/godssenki/simu_tool/: Makefile.am  gen_robot.sh
server/godssenki/sql_scripts/: 20140811.up  20140815.up  20140821.up  20141014.up  autoGenUp.py  db_datacenter.sql  db_game.sql  db_global.sql  db_gmtool.sql  db_statics.sql  gen_robot.sh.bak  sql.sh.240  sql.sh.bak  sql.sh.ck  sql.sh.liujian  sql.sh.tw
server/godssenki/statics/: buchang.sh  cal_nuts_data.py  cal_nuts_data.py.20131215  (+12 more)
server/test/: Makefile.am  valg.sh
server/tools/: ip.sh
server/yslib/: Makefile.am
(+5348 files in other folders)
