#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(ysserver, 1.0.0, 42478313@qq.com)
AM_INIT_AUTOMAKE([foreign])

# Checks for programs.
#AC_PROG_RANLIB
LT_INIT
AC_PROG_CXX
AC_PROG_LIBTOOL

AC_CONFIG_HEADERS([conf.h])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 yslib/Makefile
                 yslib/utility/Makefile
                 yslib/perf/Makefile
                 yslib/rpc/Makefile
                 yslib/package/Makefile
                 yslib/mysql/Makefile
                 yslib/ys_lua/Makefile
                 yslib/ys_log/Makefile
                 yslib/thread_pool/Makefile
                 yslib/jsoncpp/Makefile
                 yslib/ys_jpack/Makefile
                 yslib/db_service/Makefile
                 yslib/dbmid_client/Makefile
                 godssenki/Makefile
                 godssenki/common/Makefile
                 godssenki/route/Makefile
                 godssenki/gateway/Makefile
                 godssenki/scene/Makefile
                 godssenki/dbmid/Makefile
                 godssenki/invcode/Makefile
                 godssenki/login/Makefile
                 godssenki/simu_tool/Makefile
                 godssenki/simu_tool/robot/Makefile
                 godssenki/simu_compression/Makefile
                 godssenki/simu_compression/client/Makefile
                 ])
AC_OUTPUT
