INCLUDES=-I$(top_srcdir)/yslib/utility -I$(top_srcdir)/yslib/ys_log -I$(top_srcdir)/yslib/rpc -I$(top_srcdir)/yslib/ys_jpack  -I$(top_srcdir)/yslib/perf

#CXXFLAGS = -Wall -g -O2 -fPIC
AM_CPPFLAGS = -Wall -O2  -fPIC -std=c++0x

noinst_LTLIBRARIES = libdbmid_client.la
libdbmid_client_la_LIBFLAGS = 
libdbmid_client_la_LIBADD =

libdbmid_client_la_SOURCES = \
								  dbmid_client.cpp 


